force-app/main/default/objects/FinServ__DialogLookUpConfig__mdt/FinServ__DialogLookUpConfig__mdt.object-meta.xml
<CustomObject>
    <description
  >Defines options for creating new records from lookup fields in dialog boxes.</description>
    <label>DialogLookUpConfig</label>
    <pluralLabel>DialogLookUpConfigs</pluralLabel>
</CustomObject>