force-app/main/default/objects/FinServ__DialogLookUpConfig__mdt/fields/FinServ__CreateEvent__c.field-meta.xml
<CustomField>
    <fullName>FinServ__CreateEvent__c</fullName>
    <description>Specifies the type of custom dialog box to open.</description>
    <label>Create Event</label>
    <length>255</length>
    <type>Text</type>
</CustomField>