force-app/main/default/objects/FinServ__DialogLookUpConfig__mdt/fields/FinServ__CreateLabel__c.field-meta.xml
<CustomField>
    <fullName>FinServ__CreateLabel__c</fullName>
    <description
  >Label of the New record option in the lookup field drop-down list.</description>
    <label>Create Label</label>
    <length>128</length>
    <required>true</required>
    <type>Text</type>
</CustomField>