force-app/main/default/objects/FinServ__DialogLookUpConfig__mdt/fields/FinServ__ObjectName__c.field-meta.xml
<CustomField>
    <fullName>FinServ__ObjectName__c</fullName>
    <description>Name of the object associated with the lookup.</description>
    <label>Object Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>